# solaredge_modbus

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  compose.yaml  data_server.py  example-inverteronly.py  example.py  example_influxdb.py  example_influxdb_v2.py  example_mqtt.py  localhost.cmd  modbus-to-mqtt.py  pv-leistung.py  raspberrypi.cmd  requirements.txt  setup.cfg  setup.py  showproxy.cmd  showsolaredge.cmd  solaredge-emoncms.py  write_influx.py
documents/: Victron.txt  sunspec-information-model-reference-20170928.xlsx
solaredge_modbus/: __init__.py
src/solaredge_modbus/: __init__.py
