[metadata]
name = solaredge_modbus
version = 0.7.0
author = nmakel
description = SolarEdge Modbus parser library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/nmakel/solaredge_modbus
project_urls =
    Issue Tracker = https://github.com/nmakel/solaredge_modbus/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >= 3.8
install_requires =
    pymodbus >= 3.0.0

[options.packages.find]
where = src